--- a/3.Recommender_system.ipynb
+++ b/3.Recommender_system.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -11,7 +11,7 @@
     "import utils\n",
     "import numpy as np\n",
     "from ipywidgets import widgets\n",
-    "from IPython.display import display"
+    "from IPython.display import display\n"
    ]
   },
   {
@@ -68,36 +68,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "score_by_author = utils.load_pickle(\"../pmi_data/score_by_author_by_titles.p\")"
+    "authorID_to_titles_stem = utils.load_pickle(\"../pmi_data/authorID_to_titles_stem.p\")                     "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(10, 20)"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "score_by_author = np.random.rand(10,20)\n",
-    "np.shape(score_by_author)"
+    "score_by_author = utils.load_pickle(\"../pmi_data/score_by_author_by_document.p\")"
    ]
   },
   {
@@ -109,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -125,16 +109,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/braemy/.conda/envs/py35/lib/python3.5/site-packages/ipykernel_launcher.py:6: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  \n"
+     ]
+    }
+   ],
    "source": [
     "score_by_author = np.apply_along_axis(scale_list, axis=1, arr=score_by_author)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,  10.,   0.,   0.,\n",
+       "         0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score_by_author[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -153,24 +169,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mentee1 = np.zeros(20)\n",
+    "mentee1[1] = 10\n",
+    "author_id = get_mentor([mentee1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([3])"
+       "array([6283])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mentee1 = np.zeros(20)\n",
-    "mentee1[0] = 1\n",
-    "get_mentor(Mentees)"
+    "author_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['creativ', 'conduct', 'handl', 'caira', 'project']]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(authorID_to_titles_stem.values())[author_id[0]]"
    ]
   },
   {
